<resources>
    <string name="app_name">RestoReviews</string>
    <string name="intro_text">Resto Reviews</string>
    <string name="email_auth_text">Email</string>
    <string name="password_auth_text">Password</string>
    <string name="signin_button_text">SIGN IN</string>
    <string name="login_button_text">LOGIN</string>
    <string name="guest_button_text">ENTER AS A GUEST</string>
    <string name="other_signin_methods">or sign in with</string>
    <string name="restaurant_text">Restaurant</string>
    <string name="comment_text">Comment</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="change_username">Change Username</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="repeat_email">Repeat Email</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="comment_review">Write your comment</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="finish">Finish</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Place Address</string>
    <string name="post_review_btn">Post a review</string>
    <string name="shows_reviews_btn">Show reviews</string>
    <string name="show_on_map_btn">Show on map</string>
    <string name="accept_btn">Accept</string>
    <string name="guest_account">Guest Account</string>
    <string name="guest_account_msj_review">You need to be logged to post a review</string>
    <string name="guest_account_msj_bookmark">You need to be logged to add a restaurant to bookmarks</string>
    <string name="error">Error</string>
    <string name="error_msj">There was an error trying to verify you account</string>
    <string name="field_invalid_msj">Some field is not valid</string>
    <string name="email_mismatch_msj">Please revise the emails fields. \nThey don\'t match</string>
    <string name="oops_sorry">Oops Sorry</string>
    <string name="oops_sorry_msj">This is a bit embarrassing but we couldn\'t find any restaurant with that name. Please, try to find another restaurant</string>
    <string name="exist_review">Existing review</string>
    <string name="exist_review_msj">You have already posted a review of this restaurant. \n\nDo you want to overwrite it?</string>
    <string name="cancel_btn">Cancel</string>
    <string name="username_msj">Please add an username to your account"</string>
    <string name="success">Success</string>
    <string name="success_msj">Your review has been modified correctly</string>
    <string name="success_msj_post">Your review has been posted correctly. \nEveryone will be able to see it</string>
    <string name="location">Location</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>