<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profileTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileTV"
        android:layout_margin="50dp"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameET"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/changeUsernameBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/design_default_color_secondary"
            android:drawableLeft="@drawable/ic_baseline_edit_24"
            android:text="@string/change_username" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:drawableLeft="@drawable/ic_baseline_logout_24"
            android:text="@string/log_out" />

    </LinearLayout>

</RelativeLayout>