<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AuthActivity">


    <TextView
        android:id="@+id/restaurantNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/restaurant_name"
        android:textColor="@color/white"
        android:textSize="35dp" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restaurantNameTextView"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <EditText
        android:id="@+id/commentEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingBar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawablePadding="20dp"
        android:hint="@string/comment_review"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_inside"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/commentEditText"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cardview_inside"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/uploadPhotoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:drawableLeft="@drawable/ic_baseline_cloud_upload_24"
            android:text="@string/upload_photo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/uploadPhotoButton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/design_default_color_secondary"
            android:text="@string/finish" />

    </LinearLayout>

</RelativeLayout>