<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear_layout_dialog_view"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bg_linear_layout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/username"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:text="@string/username_msj"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_iv"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_dialog_view"
        app:layout_constraintEnd_toEndOf="@id/linear_layout_dialog_view"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_dialog_view"
        app:layout_constraintTop_toTopOf="@+id/linear_layout_dialog_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/accept_btn"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/linear_layout_dialog_view"
        app:layout_constraintEnd_toEndOf="@id/linear_layout_dialog_view"
        app:layout_constraintStart_toStartOf="@+id/linear_layout_dialog_view"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_dialog_view" />

</androidx.constraintlayout.widget.ConstraintLayout>