<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardPreventCornerOverlap="false"
    card_view:cardBackgroundColor="@color/beauty_blue"
    tools:context=".ViewPlaceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/place_bookmark"
            android:layout_width="51dp"
            android:layout_height="58dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="21dp"
            android:background="@drawable/ic_baseline_bookmark_border_24" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_inside"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="70dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_baseline_photo_camera_24" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/bg_linear_layout"
                android:backgroundTint="#B3FFFFFF"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/place_name"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/place_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingHorizontal="10dp"
                    android:text="@string/place_address"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <RatingBar

                    android:id="@+id/rating_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:max="5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_post_review"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/design_default_color_secondary"
                        android:text="@string/post_review_btn" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_all_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/design_default_color_secondary"
                        android:text="@string/shows_reviews_btn" />


                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_show_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/design_default_color_secondary"
                    android:text="@string/show_on_map_btn" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>