<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="209dp"
    tools:layout_editor_absoluteY="8dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    card_view:cardBackgroundColor="@color/beauty_blue"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="6dp"
    app:contentPadding="4dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="15dp"
            android:id="@+id/cardview_inside">


            <ImageView
                android:id="@+id/item_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/cardview_inside"
            android:layout_toRightOf="@id/cardview_inside"
            android:paddingLeft="15dp"
            android:text="@string/restaurant_text"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/white"
            android:layout_below="@id/item_title"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/cardview_inside"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/item_ratingBar"
            android:layout_below="@id/item_location"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/cardview_inside" />

        <TextView
            android:id="@+id/item_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_text"
            android:textColor="@color/white"
            android:layout_below="@id/item_ratingBar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@id/cardview_inside"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>